--- a/spinnaker-kustomize-patches/spinnakerservice.yml
+++ b/spinnaker-kustomize-patches/spinnakerservice.yml
@@ -6,7 +6,7 @@ spec:
   spinnakerConfig:
     # ------- Main config section, equivalent to "~/.hal/config" from Halyard
     config:
-      version: 1.25.5            # Spinnaker version to deploy
+      version: 1.26.4            # Spinnaker version to deploy
       # armory: {}               # Features only available in Armory Spinnaker distribution.
       artifacts: {}              # Artifacts are "things" that can be deployed or used within spinnaker: docker images, github files, etc.
       canary: {}                 # Settings used for performing automated canary analysis.
@@ -20,20 +20,20 @@ spec:
       providers: {}              # Cloud providers supported by spinnaker: kubernetes, aws, gcp, etc.
       repository: {}             # Settings for artifact repositories.
       security:                  # Authentication and authorization.
-        # authz:
-        #   enabled: false
-        #   groupMembership:
-        #     service: EXTERNAL
-        # authn:
-        #   enabled: false
+        authz:
+          enabled: false
+          # groupMembership:
+          #   service: EXTERNAL
+        authn:
+          enabled: false
         apiSecurity:
-          # ssl:
-          #   enabled: false
+          ssl:
+            enabled: false
           overrideBaseUrl: https://try.gsoc.armoy.io/api/v1 #https://gate.try.gsoc.armory.io       # Specify your DNS name for Gate with https scheme
-          corsAccessPattern: https://try.gsoc.armoy.io/
+          corsAccessPattern: ^.*$
         uiSecurity:
-          # ssl:
-          #   enabled: false
+          ssl:
+            enabled: false
           overrideBaseUrl: https://try.gsoc.armory.io       # Specify your DNS name for Deck with https scheme      
       spinnaker: {}              # Configurations for plugins
 
@@ -43,6 +43,12 @@ spec:
       spinnaker: {}              # Settings in this section are applied to all spinnaker services. Equivalent of "spinnaker-local.yml"
       spinnakerconfig: {}        # Settings in this section are applied to all spinnaker services. Equivalent of "spinnakerconfig.yml", which is in turn equivalent of "bootstrap.yml" of spring boot applications.
       gate: #{}
+        # security.basicform.enabled: true
+        # spring:
+        #   security:
+        #     user:
+        #       name: spinnaker                                        # The basic auth username you want to use.
+        #       password: spinnaker                                    # The basic auth password you want to use.
         services:
           rosco:
             enabled: true
@@ -51,15 +57,28 @@ spec:
             baseUrl: http://spin-rosco.spinnaker:8087
             enabled: true
         cors:
-          allow-mode: "list"
-          allowed-origins: >
-            http://try.gsoc.armory.io,
-            https://try.gsoc.armory.io,
-          # http://localhost:9000,
-          # https://localhost:9000,
-          # http://localhost:8084,
-          # https://localhost:8084
-          expectLocalhost: false
+          # allow-mode: "list"
+          # allowed-origins: >
+          #   http://localhost:9000,
+          #   https://localhost:9000,
+          #   http://localhost:8084,
+          #   https://localhost:8084,
+          #   http://try.gsoc.armory.io,
+          #   https://try.gsoc.armory.io,
+          #   http://try.gsoc.armoy.io/api/v1,
+          #   https://try.gsoc.armoy.io/api/v1
+          # expectLocalhost: true
+        # cors:
+          allowedOriginsPattern: ^.*$
+          # allow-mode: "list"
+          # allowed-origins: >
+          #   http://localhost:9000,
+          #   https://localhost:9000,
+          #   http://k8s-spinnake-spinnake-73caff7fd8-1382991250.us-east-2.elb.amazonaws.com,
+          #   https://k8s-spinnake-spinnake-73caff7fd8-1382991250.us-east-2.elb.amazonaws.com,
+          #   http://try.gsoc.armory.io,
+          #   https://try.gsoc.armory.io
+          # expectLocalhost: true
         # security:
         #   basicform:
         #     enabled: true
