--- a/spinnaker-kustomize-patches/security/patch-github.yml
+++ b/spinnaker-kustomize-patches/security/patch-github.yml
@@ -16,7 +16,7 @@ spec:
           oauth2:
             enabled: true
             client:
-              clientId: xxxxxxxxxxxxxxxxxxxx                                   # The OAuth client ID you have configured with your OAuth provider.
+              clientId: 1e3b0a0dc074fe313528                                   # The OAuth client ID you have configured with your OAuth provider.
               clientSecret: encrypted:k8s!n:spin-secrets!k:oauth-client-secret # (Secret). The OAuth client secret you have configured with your OAuth provider.
               accessTokenUri: https://github.com/login/oauth/access_token      # Used to get an access token.
               userAuthorizationUri: https://github.com/login/oauth/authorize   # Used to get an authorization code.
@@ -36,5 +36,5 @@ spec:
             github:
               roleProviderType: GITHUB
               baseUrl: https://api.github.com           # Used if using GitHub enterprise or some other non github.com GitHub installation.
-              accessToken: encrypted:k8s!n:spin-secrets!k:github-token # (Secret). A personal access token of an account with access to your organization’s GitHub Teams structure. Supports encrypted value.
-              organization: myorg                       # The GitHub organization under which to query for GitHub Teams.
+              accessToken: encrypted:k8s!n:spin-secrets!k:github-token  # (Secret). A personal access token of an account with access to your organization’s GitHub Teams structure. Supports encrypted value.
+              organization: try-spinnaker-io                       # The GitHub organization under which to query for GitHub Teams.
