--- a/spinnaker-kustomize-patches/security/patch-github.yml
+++ b/spinnaker-kustomize-patches/security/patch-github.yml
@@ -29,12 +29,32 @@ spec:
               lastName: ""                                                     # The last name field returned from your OAuth provider.
               username: login                                                  # The username field returned from your OAuth provider.
             provider: GITHUB                                                   # One of AZURE, GITHUB, ORACLE, OTHER, GOOGLE
-        authz:
-          enabled: true
-          groupMembership:
-            service: GITHUB                             # One of EXTERNAL, FILE, GOOGLE, GITHUB, LDAP
-            github:
-              roleProviderType: GITHUB
-              baseUrl: https://api.github.com           # Used if using GitHub enterprise or some other non github.com GitHub installation.
-              accessToken: encrypted:k8s!n:spin-secrets!k:github-token  # (Secret). A personal access token of an account with access to your organization’s GitHub Teams structure. Supports encrypted value.
-              organization: try-spinnaker-io                       # The GitHub organization under which to query for GitHub Teams.
+        # authz:
+        #   enabled: true
+        #   groupMembership:
+        #     service: GITHUB                             # One of EXTERNAL, FILE, GOOGLE, GITHUB, LDAP
+        #     github:
+        #       roleProviderType: GITHUB
+        #       baseUrl: https://api.github.com           # Used if using GitHub enterprise or some other non github.com GitHub installation.
+        #       accessToken: encrypted:k8s!n:spin-secrets!k:github-token  # (Secret). A personal access token of an account with access to your organization’s GitHub Teams structure. Supports encrypted value.
+        #       organization: try-spinnaker-io                       # The GitHub organization under which to query for GitHub Teams.
+    # profiles:
+    #   gate:
+    #     security:
+    #       oauth2:
+    #         client:
+    #           clientId: 1e3b0a0dc074fe313528
+    #           clientSecret: encrypted:k8s!n:spin-secrets!k:oauth-client-secret
+    #           userAuthorizationUri: https://github.com/login/oauth/authorize # Used to get an authorization code
+    #           accessTokenUri: https://github.com/login/oauth/access_token # Used to get an access token
+    #           scope: read:org,user:email
+    #         resource:
+    #           userInfoUri: https://api.github.com/user # Used to the current user's profile
+    #         userInfoMapping: # Used to map the userInfo response to our User
+    #           email: email
+    #           firstName: name
+    #           lastName:
+    #           username: login
+    #         providerRequirements:
+    #           type: github
+    #           organization: try-spinnaker-io
