--- a/spinnaker-kustomize-patches/spinnakerservice.yml
+++ b/spinnaker-kustomize-patches/spinnakerservice.yml
@@ -21,12 +21,8 @@ spec:
       repository: {}             # Settings for artifact repositories.
       security:                  # Authentication and authorization.
         apiSecurity:
-          ssl:
-            enabled: true
           overrideBaseUrl: https://try.gsoc.armory.io/api/v1 #https://gate.try.gsoc.armory.io       # Specify your DNS name for Gate with https scheme
         uiSecurity:
-          ssl:
-            enabled: true
           overrideBaseUrl: https://try.gsoc.armory.io       # Specify your DNS name for Deck with https scheme      
       spinnaker: {}              # Configurations for plugins
 
@@ -35,13 +31,7 @@ spec:
     profiles:
       spinnaker: {}              # Settings in this section are applied to all spinnaker services. Equivalent of "spinnaker-local.yml"
       spinnakerconfig: {}        # Settings in this section are applied to all spinnaker services. Equivalent of "spinnakerconfig.yml", which is in turn equivalent of "bootstrap.yml" of spring boot applications.
-      gate: #{}
-        # security.basicform.enabled: true
-        # spring:
-        #   security:
-        #     user:
-        #       name: spinnaker                                        # The basic auth username you want to use.
-        #       password: spinnaker                                    # The basic auth password you want to use.
+      gate:
         services:
           rosco:
             enabled: true
@@ -49,35 +39,6 @@ spec:
           keel:
             baseUrl: http://spin-rosco.spinnaker:8087
             enabled: true
-        #cors:
-          # allow-mode: "list"
-          # allowed-origins: >
-          #   http://localhost:9000,
-          #   https://localhost:9000,
-          #   http://localhost:8084,
-          #   https://localhost:8084,
-          #   http://try.gsoc.armory.io,
-          #   https://try.gsoc.armory.io,
-          #   http://try.gsoc.armoy.io/api/v1,
-          #   https://try.gsoc.armoy.io/api/v1
-          # expectLocalhost: true
-        # cors:
-          # allowedOriginsPattern: ^.*$
-          # allow-mode: "list"
-          # allowed-origins: >
-          #   http://localhost:9000,
-          #   https://localhost:9000,
-          #   http://k8s-spinnake-spinnake-73caff7fd8-1382991250.us-east-2.elb.amazonaws.com,
-          #   https://k8s-spinnake-spinnake-73caff7fd8-1382991250.us-east-2.elb.amazonaws.com,
-          #   http://try.gsoc.armory.io,
-          #   https://try.gsoc.armory.io
-          # expectLocalhost: true
-        # security:
-        #   basicform:
-        #     enabled: true
-        #   user:
-        #     name: spin
-        #     password: veryspin
         server:
           servlet:
             context-path: /api/v1
@@ -98,7 +59,7 @@ spec:
     # ------- Section "spec.kustomize" gives greater control. Equivalent to "~/.hal/default/service-settings" from Halyard.
     service-settings:
       spinnaker: {}              # Configurations that apply to all services
-      gate: #{}
+      gate:
         healthEndpoint: /api/v1/health
       orca: {}
       rosco: {}
@@ -107,14 +68,6 @@ spec:
       clouddriver: {}
       front50: {}
   expose: {}              # Controls how spinnaker is exposed outside of the cluster.
-    # type: ingress
-    # type: service
-    # service:
-    #   type: LoadBalancer
-    # annotations:
-    #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-    #   service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:602961672324:certificate/29282c67-df3a-42c8-b82b-ee22379521c1 # Replace with your cert ARN
-    #   service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 80,443
   validation: {}        # Enabled/disables some validations done by the operator's admission webhook when deploying spinnaker.
   kustomize:            # Free form kustomize patches for changing how spinnaker deployments and services are generated.
     deck: {}
