spin cli pipelines

--- a/spinnaker-kustomize-patches/security/patch-file-authz.yml
+++ b/spinnaker-kustomize-patches/security/patch-file-authz.yml
@@ -27,9 +27,11 @@ spec:
         # Roles don’t need to be defined elsewhere, they’re automatically created based on these mappings.
         #-----------------------------------------------------------------------------------------------------------------
         users:
-        - username: ko28
+        - username: "danielhbko@gmail.com"
           roles:
           - admin
-        - username: "*"
-          roles:
-          - public
+
+
+# - username: "*"
+#   roles:
+#   - public
