--- a/spinnaker-kustomize-patches/recipes/kustomization-try.yml
+++ b/spinnaker-kustomize-patches/recipes/kustomization-try.yml
@@ -32,8 +32,8 @@ patchesStrategicMerge:
   - accounts/docker/patch-ecr.yml
 
   # OAuth 2.0
-  - security/patch-github.yml
+  - security/patch-google.yml
 
   - security/patch-file-authz.yml
   - security/patch-fiat-create-app-roles.yml
-  - security/patch-x509.yml
+  # - security/patch-x509.yml
