have a actual readme

--- a/spinnaker-kustomize-patches/security/patch-fiat-create-app-roles.yml
+++ b/spinnaker-kustomize-patches/security/patch-fiat-create-app-roles.yml
@@ -38,6 +38,30 @@ spec:
                       EXECUTE:
                       - "admin"
                       - "public"
+                  - prefix: "Trigger"
+                    permissions:
+                      CREATE:
+                      - "admin" # group members that CAN create applications if enabled
+                      READ:
+                      - "admin"
+                      - "public"
+                      WRITE:
+                      - "admin"
+                      EXECUTE:
+                      - "admin"
+                      - "public"
+                  - prefix: "Highlander"
+                    permissions:
+                      CREATE:
+                      - "admin" # group members that CAN create applications if enabled
+                      READ:
+                      - "admin"
+                      - "public"
+                      WRITE:
+                      - "admin"
+                      EXECUTE:
+                      - "admin"
+                      - "public"
                   - prefix: "cleanup"
                     permissions:
                       CREATE:
