add default role plugin

--- a/spinnaker-kustomize-patches/security/patch-file-authz.yml
+++ b/spinnaker-kustomize-patches/security/patch-file-authz.yml
@@ -31,6 +31,10 @@ spec:
           roles:
           - admin
           - public
+        - username: "fernando.freire@armory.io"
+          roles:
+          - admin
+          - public
         - username: "sidecar@try-spinnaker-io.iam.gserviceaccount.com"
           roles:
           - admin
