--- a/scripts/pipelines/deploy-app.json
+++ b/scripts/pipelines/deploy-app.json
@@ -66,7 +66,7 @@
                             "spec": {
                                 "containers": [
                                     {
-                                        "image": "nginx:latest",
+                                        "image": "602961672324.dkr.ecr.us-east-2.amazonaws.com/try-spinnaker-io-nginx:latest",
                                         "name": "nginx",
                                         "ports": [
                                             {
